--- a/app/src/main/res/layout/album_card_form.xml
+++ b/app/src/main/res/layout/album_card_form.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                  xmlns:app="http://schemas.android.com/apk/res-auto"
+                  xmlns:tools="http://schemas.android.com/tools"
                   android:layout_width="match_parent" android:layout_height="match_parent"
                   android:padding="16dp"
         >
@@ -9,40 +11,51 @@
         android:id="@+id/cv"
         >
 
-        <RelativeLayout
+        <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="16dp"
             >
 
             <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
                 android:id="@+id/album_image"
+                android:layout_width="45dp"
+                android:layout_height="43dp"
                 android:layout_alignParentLeft="true"
-                android:layout_alignParentTop="true"
-                android:layout_marginRight="16dp"
                 android:layout_alignParentStart="true"
-                android:layout_marginEnd="16dp"/>
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/album_name"
-                android:layout_toRightOf="@+id/album_image"
                 android:layout_alignParentTop="true"
-                android:textSize="30sp"
-                />
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"/>
 
             <TextView
+                android:id="@+id/album_name"
+                android:layout_width="51dp"
+                android:layout_height="43dp"
+                android:layout_alignParentTop="true"
+                android:layout_marginLeft="8dp"
+                android:layout_marginStart="8dp"
+                android:layout_toEndOf="@+id/album_image"
+                android:layout_toRightOf="@+id/album_image"
+                android:textSize="30sp"
+                app:layout_constraintBottom_toBottomOf="@+id/album_image"
+                app:layout_constraintStart_toEndOf="@+id/album_image"
+                app:layout_constraintTop_toTopOf="@+id/album_image"
+                app:layout_constraintVertical_bias="0.533"/>
+
+            <TextView
+                android:id="@+id/artist_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/artist_name"
-                android:layout_toRightOf="@+id/album_image"
                 android:layout_below="@+id/album_name"
-                />
+                android:layout_marginLeft="4dp"
+                android:layout_marginStart="4dp"
+                android:layout_marginTop="4dp"
+                android:layout_toEndOf="@+id/album_image"
+                android:layout_toRightOf="@+id/album_image"
+                app:layout_constraintStart_toStartOf="@+id/album_name"
+                app:layout_constraintTop_toBottomOf="@+id/album_name"/>
 
-        </RelativeLayout>
+        </android.support.constraint.ConstraintLayout>
 
     </android.support.v7.widget.CardView>
 
