--- a/app/src/main/res/layout/album_card_form.xml
+++ b/app/src/main/res/layout/album_card_form.xml
@@ -9,38 +9,43 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/cv"
+        android:elevation="5dp"
         >
 
         <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="16dp"
+            android:id="@+id/card"
             >
 
             <ImageView
                 android:id="@+id/album_image"
-                android:layout_width="45dp"
-                android:layout_height="43dp"
+                android:layout_width="302dp"
+                android:layout_height="152dp"
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true"
                 android:layout_alignParentTop="true"
+                android:layout_marginBottom="8dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"/>
 
             <TextView
                 android:id="@+id/album_name"
-                android:layout_width="51dp"
-                android:layout_height="43dp"
+                android:layout_width="wrap_content"
+                android:layout_height="34dp"
                 android:layout_alignParentTop="true"
-                android:layout_marginLeft="8dp"
-                android:layout_marginStart="8dp"
+                android:layout_marginLeft="16dp"
+                android:layout_marginStart="16dp"
+                android:background="@color/with_grad"
                 android:layout_toEndOf="@+id/album_image"
                 android:layout_toRightOf="@+id/album_image"
                 android:textSize="30sp"
                 app:layout_constraintBottom_toBottomOf="@+id/album_image"
-                app:layout_constraintStart_toEndOf="@+id/album_image"
-                app:layout_constraintTop_toTopOf="@+id/album_image"
-                app:layout_constraintVertical_bias="0.533"/>
+                app:layout_constraintStart_toStartOf="@+id/album_image"
+                />
 
             <TextView
                 android:id="@+id/artist_name"
@@ -50,6 +55,7 @@
                 android:layout_marginLeft="4dp"
                 android:layout_marginStart="4dp"
                 android:layout_marginTop="4dp"
+                android:background="@color/with_grad"
                 android:layout_toEndOf="@+id/album_image"
                 android:layout_toRightOf="@+id/album_image"
                 app:layout_constraintStart_toStartOf="@+id/album_name"
