--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#6fa4b6</color>
     <color name="black_effective">#2a2a2a</color>
+    <color name="with_grad">#c5ffffff</color>
 </resources>
