--- a/app/src/main/res/layout/album_card_form.xml
+++ b/app/src/main/res/layout/album_card_form.xml
@@ -1,68 +1,61 @@
 <?xml version="1.0" encoding="utf-8"?>
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                  xmlns:app="http://schemas.android.com/apk/res-auto"
-                  xmlns:tools="http://schemas.android.com/tools"
-                  android:layout_width="match_parent" android:layout_height="wrap_content"
-                  android:padding="16dp"
-        >
-    <android.support.v7.widget.CardView
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+                                    xmlns:app="http://schemas.android.com/apk/res-auto"
+                                    xmlns:tools="http://schemas.android.com/tools"
+                                    android:id="@+id/cv"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:layout_marginLeft="5dip"
+                                    android:layout_marginRight="5dip"
+                                    android:layout_marginTop="12dp"
+                                    android:foreground="?attr/selectableItemBackground">
+
+    <android.support.constraint.ConstraintLayout
+        android:id="@+id/card"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/cv"
-        android:elevation="5dp"
+        android:padding="16dp"
         >
 
-        <android.support.constraint.ConstraintLayout
-            android:layout_width="match_parent"
+        <ImageView
+            android:id="@+id/album_image"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"/>
+
+        <TextView
+            android:id="@+id/album_name"
+            android:layout_width="wrap_content"
+            android:layout_height="34dp"
+            android:layout_alignParentTop="true"
+            android:layout_marginTop="8dp"
+            android:layout_toEndOf="@+id/album_image"
+            android:layout_toRightOf="@+id/album_image"
+            android:background="@color/with_grad"
+            android:textSize="16sp"
+            app:layout_constraintStart_toStartOf="@+id/album_image"
+            app:layout_constraintTop_toBottomOf="@+id/album_image"/>
+
+        <TextView
+            android:id="@+id/artist_name"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:padding="16dp"
-            android:id="@+id/card"
-            >
+            android:layout_below="@+id/album_name"
+            android:layout_marginLeft="8dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_toEndOf="@+id/album_image"
+            android:layout_toRightOf="@+id/album_image"
+            android:background="@color/with_grad"
+            android:textSize="12sp"
+            app:layout_constraintStart_toStartOf="@+id/album_name"
+            app:layout_constraintTop_toBottomOf="@+id/album_name"/>
 
-            <ImageView
-                android:id="@+id/album_image"
-                android:layout_width="302dp"
-                android:layout_height="152dp"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true"
-                android:layout_alignParentTop="true"
-                android:layout_marginBottom="8dp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"/>
+    </android.support.constraint.ConstraintLayout>
 
-            <TextView
-                android:id="@+id/album_name"
-                android:layout_width="wrap_content"
-                android:layout_height="34dp"
-                android:layout_alignParentTop="true"
-                android:layout_marginLeft="16dp"
-                android:layout_marginStart="16dp"
-                android:background="@color/with_grad"
-                android:layout_toEndOf="@+id/album_image"
-                android:layout_toRightOf="@+id/album_image"
-                android:textSize="30sp"
-                app:layout_constraintBottom_toBottomOf="@+id/album_image"
-                app:layout_constraintStart_toStartOf="@+id/album_image"
-                />
-
-            <TextView
-                android:id="@+id/artist_name"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/album_name"
-                android:layout_marginLeft="4dp"
-                android:layout_marginStart="4dp"
-                android:layout_marginTop="4dp"
-                android:background="@color/with_grad"
-                android:layout_toEndOf="@+id/album_image"
-                android:layout_toRightOf="@+id/album_image"
-                app:layout_constraintStart_toStartOf="@+id/album_name"
-                app:layout_constraintTop_toBottomOf="@+id/album_name"/>
-
-        </android.support.constraint.ConstraintLayout>
-
-    </android.support.v7.widget.CardView>
-
-</LinearLayout>
+</android.support.v7.widget.CardView>
