--- a/app/src/main/res/layout/activity_information_album.xml
+++ b/app/src/main/res/layout/activity_information_album.xml
@@ -1,10 +1,115 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<android.support.v7.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/cv"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".view.InformationAlbum">
+    android:layout_height="wrap_content"
+    android:layout_marginLeft="5dip"
+    android:layout_marginRight="5dip"
+    android:layout_marginTop="12dp"
+    android:elevation="12dp"
+    android:descendantFocusability="beforeDescendants"
+    android:focusableInTouchMode="true"
+    android:foreground="?attr/selectableItemBackground">
 
-</android.support.constraint.ConstraintLayout>
+    <android.support.constraint.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:foreground="?attr/selectableItemBackground"
+        android:padding="15dp">
+
+        <ImageView
+            android:id="@+id/fragment_image_view"
+            android:layout_width="117dp"
+            android:layout_height="121dp"
+            android:layout_marginLeft="24dp"
+            android:layout_marginStart="24dp"
+            android:layout_marginTop="8dp"
+            android:textSize="18sp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/view_separator_1"/>
+
+        <View
+            android:id="@+id/view_separator_1"
+            android:layout_width="320dp"
+            android:layout_height="1dp"
+            android:layout_marginTop="8dp"
+            android:background="@color/separator_gray"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
+        </View>
+
+
+        <TextView
+            android:id="@+id/fragment_artist_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="24dp"
+            android:layout_marginStart="24dp"
+            android:textSize="18sp"
+            app:layout_constraintStart_toEndOf="@+id/fragment_image_view"
+            app:layout_constraintTop_toTopOf="@+id/fragment_image_view">
+
+        </TextView>
+
+        <TextView
+            android:id="@+id/fragment_album_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:textSize="16sp"
+            app:layout_constraintStart_toStartOf="@+id/fragment_artist_name"
+            app:layout_constraintTop_toBottomOf="@+id/fragment_artist_name">
+
+        </TextView>
+
+        <TextView
+            android:id="@+id/fragment_album_information"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:textSize="16sp"
+            app:layout_constraintStart_toStartOf="@+id/fragment_album_name"
+            app:layout_constraintTop_toBottomOf="@+id/fragment_album_name">
+
+        </TextView>
+
+        <View
+            android:id="@+id/view_separator_2"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_marginTop="48dp"
+            android:background="@color/separator_gray"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/fragment_image_view">
+        </View>
+
+        <TextView
+            android:id="@+id/fragment_album_songs"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="68dp"
+            android:textSize="16sp"
+            app:layout_constraintStart_toStartOf="@+id/fragment_image_view"
+            app:layout_constraintTop_toBottomOf="@+id/view_separator_2">
+
+        </TextView>
+
+        <View
+            android:id="@+id/view_separator_3"
+            android:layout_width="wrap_content"
+            android:layout_height="1dp"
+            android:layout_marginTop="80dp"
+            android:background="@color/separator_gray"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.1"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/fragment_album_songs">
+        </View>
+
+    </android.support.constraint.ConstraintLayout>
+</android.support.v7.widget.CardView>
