--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="colorAccent">#6fa4b6</color>
     <color name="black_effective">#2a2a2a</color>
     <color name="with_grad">#c5ffffff</color>
+    <color name="separator_gray">#98a6af</color>
 </resources>
