--- a/app/src/main/res/layout/album_card_form.xml
+++ b/app/src/main/res/layout/album_card_form.xml
@@ -14,16 +14,16 @@
         android:id="@+id/card"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="16dp"
         >
 
         <ImageView
             android:id="@+id/album_image"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
+            android:layout_width="match_parent"
+            android:layout_height="260dp"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
+            android:scaleType="fitXY"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"/>
@@ -31,13 +31,18 @@
         <TextView
             android:id="@+id/album_name"
             android:layout_width="wrap_content"
-            android:layout_height="34dp"
+            android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="16dp"
             android:layout_toEndOf="@+id/album_image"
             android:layout_toRightOf="@+id/album_image"
             android:background="@color/with_grad"
+            android:maxLines="2"
+            android:minLines="1"
+            android:gravity="center"
+            android:singleLine="false"
             android:textSize="16sp"
+            app:layout_constraintEnd_toEndOf="@+id/album_image"
             app:layout_constraintStart_toStartOf="@+id/album_image"
             app:layout_constraintTop_toBottomOf="@+id/album_image"/>
 
@@ -46,14 +51,23 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/album_name"
+            android:layout_marginBottom="16dp"
+            android:layout_marginEnd="8dp"
+            android:gravity="center"
             android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
             android:layout_toEndOf="@+id/album_image"
             android:layout_toRightOf="@+id/album_image"
             android:background="@color/with_grad"
+            android:maxLines="4"
+            android:minLines="1"
+            android:singleLine="false"
             android:textSize="12sp"
-            app:layout_constraintStart_toStartOf="@+id/album_name"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="@+id/album_image"
+            app:layout_constraintStart_toStartOf="@+id/album_image"
             app:layout_constraintTop_toBottomOf="@+id/album_name"/>
 
     </android.support.constraint.ConstraintLayout>
