--- a/app/src/main/res/layout/activity_albums_collection.xml
+++ b/app/src/main/res/layout/activity_albums_collection.xml
@@ -24,21 +24,20 @@
         <android.support.v7.widget.RecyclerView
             android:id="@+id/recycler_view"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
+            android:layout_height="match_parent"/>
     </LinearLayout>
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:background="@color/with_grad"
+        android:background="@color/colorPrimaryDarkTransparent"
         app:layout_constraintBottom_toBottomOf="parent"
         >
 
         <EditText
             android:id="@+id/search_edit_text"
-            android:layout_width="186dp"
-            android:layout_height="50dp"
+            android:layout_width="180dp"
+            android:layout_height="30dp"
             android:layout_marginBottom="8dp"
             android:layout_marginEnd="8dp"
             android:layout_marginLeft="8dp"
@@ -47,8 +46,12 @@
             android:layout_marginTop="8dp"
             android:gravity="center"
             android:hint="@string/search"
+            android:background="@drawable/rounded_edittext"
             android:inputType="text"
             android:textSize="16sp"
+            android:maxLines="4"
+            android:minLines="1"
+            android:singleLine="false"
             android:imeOptions="actionSearch"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
