--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,11 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#51535e</color>
-    <color name="colorPrimaryDark">#434449</color>
+    <color name="colorPrimary">#424768</color>
+    <color name="colorPrimaryDark">#343850</color>
     <color name="colorAccent">#6fa4b6</color>
     <color name="black_effective">#2a2a2a</color>
     <color name="with_grad">#c5ffffff</color>
     <color name="separator_gray">#98a6af</color>
     <color name="black_tr">#ad000000</color>
     <color name="w">#fff</color>
+    <color name="colorPrimaryTransparent">#eb51535e</color>
+    <color name="colorPrimaryDarkTransparent">#e2424768</color>
+
 </resources>
