--- a/app/src/main/res/layout/activity_information_album.xml
+++ b/app/src/main/res/layout/activity_information_album.xml
@@ -20,6 +20,7 @@
         android:layout_height="match_parent">
 
         <android.support.constraint.ConstraintLayout
+            android:id="@+id/cl"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:foreground="?attr/selectableItemBackground">
@@ -108,8 +109,9 @@
             <LinearLayout
                 android:id="@+id/ll_list"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_marginTop="8dp"
+                android:layout_marginBottom="16dp"
                 app:layout_constraintEnd_toEndOf="@+id/view_separator_2"
                 app:layout_constraintStart_toStartOf="@+id/view_separator_2"
                 app:layout_constraintTop_toTopOf="@+id/view_separator_2">
@@ -129,19 +131,7 @@
                     app:layout_constraintTop_toTopOf="@+id/view_separator_2">
                 </com.nimtego.itunes.view.custom_view.CustomListView>
             </LinearLayout>
-
-
-            <View
-                android:id="@+id/view_separator_3"
-                android:layout_width="wrap_content"
-                android:layout_height="1dp"
-                android:layout_marginTop="16dp"
-                android:background="@color/separator_gray"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.1"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/ll_list">
-            </View>
+            
         </android.support.constraint.ConstraintLayout>
     </ScrollView>
 </android.support.v7.widget.CardView>
