--- a/app/src/main/res/layout/activity_albums_collection.xml
+++ b/app/src/main/res/layout/activity_albums_collection.xml
@@ -29,7 +29,7 @@
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="50dp"
+        android:layout_height="wrap_content"
         android:background="@color/colorPrimaryDarkTransparent"
         app:layout_constraintBottom_toBottomOf="parent"
         >
