--- a/app/src/main/res/layout/album_card_form.xml
+++ b/app/src/main/res/layout/album_card_form.xml
@@ -5,21 +5,20 @@
                                     android:id="@+id/cv"
                                     android:layout_width="match_parent"
                                     android:layout_height="wrap_content"
-                                    android:layout_marginLeft="5dip"
-                                    android:layout_marginRight="5dip"
-                                    android:layout_marginTop="12dp"
-                                    android:foreground="?attr/selectableItemBackground">
+                                    android:layout_marginLeft="4dp"
+                                    android:layout_marginRight="4dp"
+                                    android:layout_marginBottom="4dp">
 
     <android.support.constraint.ConstraintLayout
         android:id="@+id/card"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         >
 
         <ImageView
             android:id="@+id/album_image"
             android:layout_width="match_parent"
-            android:layout_height="150dp"
+            android:layout_height="200dp"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
@@ -36,12 +35,12 @@
             android:layout_marginTop="16dp"
             android:layout_toEndOf="@+id/album_image"
             android:layout_toRightOf="@+id/album_image"
-            android:background="@color/with_grad"
             android:maxLines="2"
             android:minLines="1"
             android:gravity="center"
             android:singleLine="false"
             android:textSize="16sp"
+            android:textColor="@color/w"
             app:layout_constraintEnd_toEndOf="@+id/album_image"
             app:layout_constraintStart_toStartOf="@+id/album_image"
             app:layout_constraintTop_toBottomOf="@+id/album_image"/>
@@ -60,9 +59,9 @@
             android:layout_marginTop="8dp"
             android:layout_toEndOf="@+id/album_image"
             android:layout_toRightOf="@+id/album_image"
-            android:background="@color/with_grad"
             android:maxLines="4"
             android:minLines="1"
+            android:textColor="@color/w"
             android:singleLine="false"
             android:textSize="12sp"
             app:layout_constraintBottom_toBottomOf="parent"
