--- a/app/src/main/res/layout/song_card_form.xml
+++ b/app/src/main/res/layout/song_card_form.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/cv"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="100dp"
     android:layout_marginLeft="4dp"
     android:layout_marginRight="4dp"
     android:layout_marginTop="4dp"
@@ -14,12 +14,12 @@
         android:id="@+id/card"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/cardBack">
+        android:background="@color/reds">
 
         <ImageView
             android:id="@+id/song_image"
-            android:layout_width="140dp"
-            android:layout_height="140dp"
+            android:layout_width="100dp"
+            android:layout_height="match_parent"
             android:layout_alignParentStart="true"
             android:layout_alignParentLeft="true"
             android:layout_alignParentTop="true"
@@ -27,38 +27,59 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <TextView
-            android:id="@+id/song_name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="8dp"
-            android:text="song"
-            android:textColor="@color/w"
-            android:textSize="24sp"
-            app:layout_constraintStart_toEndOf="@+id/song_image"
-            app:layout_constraintTop_toTopOf="parent" />
+        <android.support.constraint.ConstraintLayout
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/song_image">
 
-        <TextView
-            android:id="@+id/song_album_name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="32dp"
-            android:text="song_album_name"
-            android:textSize="16sp"
-            app:layout_constraintStart_toStartOf="@+id/song_name"
-            app:layout_constraintTop_toBottomOf="@+id/song_name" />
+            <TextView
+                android:id="@+id/song_name"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
+                android:maxLines="4"
+                android:minLines="1"
+                android:singleLine="false"
+                android:text="song"
+                android:textColor="@color/w"
+                android:textSize="16sp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
-        <TextView
-            android:id="@+id/song_artist_name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:textSize="16sp"
-            android:text="song_artist"
-            app:layout_constraintStart_toStartOf="@+id/song_album_name"
-            app:layout_constraintTop_toBottomOf="@+id/song_album_name" />
+            <TextView
+                android:id="@+id/song_album_name"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="32dp"
+                android:maxLines="4"
+                android:minLines="1"
+                android:singleLine="false"
+                android:text="song_album_name"
+                android:textColor="@color/w"
+                android:textSize="12sp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/song_name" />
 
+            <TextView
+                android:id="@+id/song_artist_name"
+                android:layout_width="match_parent"
+                android:layout_height="16dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginBottom="8dp"
+                android:maxLines="4"
+                android:minLines="1"
+                android:singleLine="false"
+                android:text="song_artist"
+                android:textColor="@color/w"
+                android:textSize="12sp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/song_album_name" />
+        </android.support.constraint.ConstraintLayout>
     </android.support.constraint.ConstraintLayout>
 
 </android.support.v7.widget.CardView>
