--- a/app/src/main/res/layout/album_card_form.xml
+++ b/app/src/main/res/layout/album_card_form.xml
@@ -29,47 +29,49 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"/>
 
-        <TextView
-            android:id="@+id/album_name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            android:layout_marginTop="16dp"
-            android:layout_toEndOf="@+id/album_image"
-            android:layout_toRightOf="@+id/album_image"
-            android:maxLines="2"
-            android:minLines="1"
-            android:gravity="center"
-            android:singleLine="false"
-            android:textSize="16sp"
-            android:textColor="@color/w"
-            app:layout_constraintEnd_toEndOf="@+id/album_image"
-            app:layout_constraintStart_toStartOf="@+id/album_image"
-            app:layout_constraintTop_toBottomOf="@+id/album_image"/>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:orientation="vertical"
+            android:background="@color/with_grad"
+            android:layout_height="80dp"
+            app:layout_constraintBottom_toBottomOf="@+id/album_image">
 
-        <TextView
-            android:id="@+id/artist_name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/album_name"
-            android:layout_marginBottom="16dp"
-            android:layout_marginEnd="8dp"
-            android:gravity="center"
-            android:layout_marginLeft="8dp"
-            android:layout_marginRight="8dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
-            android:layout_toEndOf="@+id/album_image"
-            android:layout_toRightOf="@+id/album_image"
-            android:maxLines="4"
-            android:minLines="1"
-            android:textColor="@color/w"
-            android:singleLine="false"
-            android:textSize="12sp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="@+id/album_image"
-            app:layout_constraintStart_toStartOf="@+id/album_image"
-            app:layout_constraintTop_toBottomOf="@+id/album_name"/>
+            <TextView
+                android:id="@+id/album_name"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginTop="16dp"
+                android:gravity="center"
+                android:maxLines="2"
+                android:singleLine="false"
+                android:ellipsize="end"
+                android:textColor="@color/w"
+                android:textSize="16sp"
+                app:layout_constraintBottom_toTopOf="@+id/artist_name"
+                app:layout_constraintEnd_toEndOf="@+id/album_image"
+                app:layout_constraintHorizontal_bias="0.498"
+                app:layout_constraintStart_toStartOf="@+id/album_image" />
+
+            <TextView
+                android:id="@+id/artist_name"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginTop="8dp"
+                android:gravity="center"
+                android:maxLines="1"
+                android:singleLine="false"
+                android:ellipsize="end"
+                android:textColor="@color/w"
+                android:textSize="12sp"
+                app:layout_constraintBottom_toBottomOf="@+id/album_image"
+                app:layout_constraintEnd_toEndOf="@+id/album_image"
+                app:layout_constraintHorizontal_bias="0.498"
+                app:layout_constraintStart_toStartOf="@+id/album_image" />
+        </LinearLayout>
 
     </android.support.constraint.ConstraintLayout>
 
