--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,7 +26,7 @@
 
             <ProgressBar
                 android:id="@+id/progressBar"
-                style="?android:attr/progressBarStyle"
+                android:theme="@style/AppTheme.WhiteAccent"
                 android:layout_width="50dp"
                 android:layout_height="30dp"
                 android:layout_marginStart="10dp"
