information view (wip)

--- a/app/src/main/res/layout/my_tabs_fragment.xml
+++ b/app/src/main/res/layout/my_tabs_fragment.xml
@@ -4,5 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:scrollbars="vertical"
+    android:text="@string/no_data_available"
     android:id="@+id/recycler_view">
 </android.support.v7.widget.RecyclerView>
