information view (wip)

--- a/app/src/main/res/layout/activity_information.xml
+++ b/app/src/main/res/layout/activity_information.xml
@@ -17,7 +17,7 @@
             <LinearLayout
                 android:id="@+id/frg"
                 android:layout_width="match_parent"
-                android:layout_height="300dp"
+                android:layout_height="wrap_content"
                 android:orientation="vertical">
             </LinearLayout>
 </android.support.v7.widget.CardView>
