--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#ffb938</color>
-    <color name="colorPrimaryDark">#ffa600</color>
-    <color name="colorAccent">#f9e59f</color>
+    <color name="colorPrimary">#eeeff1</color>
+    <color name="colorPrimaryDark">#878787</color>
+    <color name="colorAccent">#b1b1b1</color>
     <color name="black_effective">#2a2a2a</color>
     <color name="with_grad">#a3000000</color>
     <color name="separator_gray">#98a6af</color>
