--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#eeeff1</color>
-    <color name="colorPrimaryDark">#878787</color>
-    <color name="colorAccent">#b1b1b1</color>
-    <color name="black_effective">#2a2a2a</color>
+    <color name="colorPrimary">#4daf51</color>
+    <color name="colorPrimaryDark">#398f3d</color>
+    <color name="colorAccent">#a6d6a8</color>
+    <color name="black_effective">#ffd6a7</color>
     <color name="with_grad">#a3000000</color>
     <color name="separator_gray">#98a6af</color>
     <color name="black_tr">#ad000000</color>
