--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -32,10 +32,12 @@
             <android.support.v7.widget.SearchView
                 android:id="@+id/search_edit_text"
                 android:layout_width="wrap_content"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:layout_gravity="end"
+                android:layout_marginEnd="16dp"
+                app:theme="@style/MySearchViewStyle"
                 android:gravity="center_vertical"
-                android:drawableEnd="@drawable/ic_search_black_24dp"
+
                 android:elevation="2dp"
                 android:hint="@string/search" />
         </android.support.v7.widget.Toolbar>
