--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -23,7 +23,7 @@
         <item name="android:textColor">@color/w</item>
     </style>
 
-    <style name="MyMaterialTheme.Base" parent="Theme.AppCompat.Light.NoActionBar">
+    <style name="MyMaterialTheme.Base" parent="Theme.AppCompat.NoActionBar">
         <item name="editTextColor">@color/w</item>
         <item name="android:textColor">@color/w</item>
         <item name="windowNoTitle">true</item>
